website/websites/u64q/code/revcomp.5.shedskin.log

Mon, 13 Nov 2017 16:00:39 GMT

MAKE:
make[1]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
cp revcomp.shedskin-5.shedskin shed.py
shedskin shed.py
*** SHED SKIN Python-to-C++ Compiler 0.9.4 ***
Copyright 2005-2011 Mark Dufour; License GNU GPL version 3 (See LICENSE)

[analyzing types..]
0% ****************50% ****************50% ********************************100%
[generating c++ code..]
*WARNING* shed.py:11: Function show not called!
[elapsed time: 1.20 seconds]
make
make[2]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
g++  -O2 -march=native -Wno-deprecated  -I. -I/usr/lib/python2.7/site-packages/shedskin/lib /home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp /usr/lib/python2.7/site-packages/shedskin/lib/sys.cpp /usr/lib/python2.7/site-packages/shedskin/lib/string.cpp /usr/lib/python2.7/site-packages/shedskin/lib/re.cpp /usr/lib/python2.7/site-packages/shedskin/lib/builtin.cpp -lgc -lpcre  -o shed
/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp: In function ‘void* __shed__::__ss_main()’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp:28:9: error: ‘show’ was not declared in this scope
         show(seq, table, default_0, default_1);
         ^~~~
/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp/shed.cpp:28:9: note: suggested alternative: ‘pow’
         show(seq, table, default_0, default_1);
         ^~~~
         pow
make[2]: *** [Makefile:21: shed] Chyba 1
make[2]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
make[1]: *** [/home/dundee/workspace/benchmarksgame/bencher/makefiles/my.linux.Makefile:30: revcomp.shedskin-5.shedskin_run] Chyba 2
make[1]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/revcomp/tmp“
9.09s to complete and log all make actions

COMMAND LINE:
./shed 0 < revcomp-input1000.txt

MAKE ERROR 

